--- a/css/main.css
+++ b/css/main.css
@@ -964,9 +964,21 @@ main .input-button-wrapper.dark .inline-link a:focus {
   animation: slide-left 1s ease-in-out 2s 1 forwards;
 }
 #home section.wheel .radial-container {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+#home section.wheel .radial-container:after {
+  content: "";
+  position: absolute;
+  inset: -25% -25% auto;
+  height: 150%;
+  width: 150%;
+  opacity: 0.08;
+  background-position: center;
+  background-size: contain;
+  background-image: url("https://raw.githubusercontent.com/icscreative/scd/6a274db1b311e023701fe68e1abade8cde822cf9/img/dots.svg");
 }
 #home section.wheel .mask {
   position: relative;
