--- a/css/main.css
+++ b/css/main.css
@@ -980,6 +980,13 @@ main .input-button-wrapper.dark .inline-link a:focus {
   background-size: contain;
   background-image: url("https://raw.githubusercontent.com/icscreative/scd/6a274db1b311e023701fe68e1abade8cde822cf9/img/dots.svg");
 }
+#home section.wheel .shim {
+  position: absolute;
+  inset: 0;
+  z-index: 3;
+  border-radius: 50%;
+  box-shadow: 0 0 2rem #383745;
+}
 #home section.wheel .mask {
   position: relative;
   display: flex;
