--- a/css/main.css
+++ b/css/main.css
@@ -978,7 +978,7 @@ main .input-button-wrapper.dark .inline-link a:focus {
   opacity: 0.08;
   background-position: center;
   background-size: contain;
-  background-image: url("https://raw.githubusercontent.com/icscreative/scd/6a274db1b311e023701fe68e1abade8cde822cf9/img/dots.svg");
+  background-image: url("../docs/assets/dots.svg");
 }
 #home section.wheel .shim {
   position: absolute;
@@ -1373,7 +1373,7 @@ main .input-button-wrapper.dark .inline-link a:focus {
   content: "";
   position: absolute;
   inset: 0;
-  background-image: url("https://raw.githubusercontent.com/icscreative/scd/6a274db1b311e023701fe68e1abade8cde822cf9/img/dots.svg");
+  background-image: url("../docs/assets/dots.svg");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -1872,7 +1872,7 @@ footer menu a:focus {
     padding: 4rem;
     z-index: 2;
     border-top: 0.1em solid #dcdde4;
-    background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.4), #FFFFFF), url("https://raw.githubusercontent.com/icscreative/scd/6a274db1b311e023701fe68e1abade8cde822cf9/img/dots.svg");
+    background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.4), #FFFFFF), url("../docs/assets/dots.svg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0, -24rem;
