--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1188,7 +1188,7 @@ main {
       opacity: 0.08;
       background-position: center;
       background-size: contain;
-      background-image: url('https://raw.githubusercontent.com/icscreative/scd/6a274db1b311e023701fe68e1abade8cde822cf9/img/dots.svg');
+      background-image: url('../docs/assets/dots.svg');
     }
     .shim {
       position: absolute;
@@ -1598,7 +1598,7 @@ main {
         content: "";
         position: absolute;
         inset: 0;
-        background-image: url('https://raw.githubusercontent.com/icscreative/scd/6a274db1b311e023701fe68e1abade8cde822cf9/img/dots.svg');
+        background-image: url('../docs/assets/dots.svg');
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
@@ -2216,7 +2216,7 @@ footer {
       padding: 4rem;
       z-index: 2;
       border-top: 0.1em solid $grey;
-      background-image: linear-gradient(90deg, #ffffff66, $white), url('https://raw.githubusercontent.com/icscreative/scd/6a274db1b311e023701fe68e1abade8cde822cf9/img/dots.svg');
+      background-image: linear-gradient(90deg, #ffffff66, $white), url('../docs/assets/dots.svg');
       background-repeat: no-repeat;
       background-size: cover;
       background-position: 0, -24rem;
