--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1625,6 +1625,8 @@ main {
           >* {
             width: 100%;
             font-size: 1.5rem;
+            display: flex;
+            gap: 0.5rem;
           }
           >*::after {
           margin-inline-start: auto;
