--- a/css/main.css
+++ b/css/main.css
@@ -976,6 +976,7 @@ main .input-button-wrapper.dark .inline-link a:focus {
   height: 150%;
   width: 150%;
   opacity: 0.08;
+  z-index: -1;
   background-position: center;
   background-size: contain;
   background-image: url("../docs/assets/dots.svg");
