fixed supercharger wheel child overflow

--- a/css/main.css
+++ b/css/main.css
@@ -1002,17 +1002,17 @@ main .input-button-wrapper.dark .inline-link a:focus {
 }
 #home section.wheel .mask .radial {
   position: absolute;
-  inset: 0;
+  inset: -0.1rem;
   z-index: 1;
 }
 #home section.wheel .mask .radial.c1 {
-  background: conic-gradient(transparent 0% 66%, #000000 66% 100%);
+  background: conic-gradient(transparent 0% 68%, #000000 68% 100%);
 }
 #home section.wheel .mask .radial.c2 {
-  background: conic-gradient(#000000 0% 33%, transparent 33% 100%);
+  background: conic-gradient(#000000 0% 34%, transparent 34% 100%);
 }
 #home section.wheel .mask .radial.c3 {
-  background: conic-gradient(transparent 0% 33%, #000000 33% 66%, transparent 66% 100%);
+  background: conic-gradient(transparent 0% 34%, #000000 34% 68%, transparent 68% 100%);
 }
 #home section.wheel .mask .radial.m1 {
   background: conic-gradient(transparent 0% 68%, #21EAC5 68% 99%, transparent 99% 0%);
